--- a/.github/workflows/sls.yml
+++ b/.github/workflows/sls.yml
@@ -14,6 +14,6 @@ jobs:
     - run: npm i -g serverless
     - run: serverless deploy
       env:
-        ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY_ID }}
-        SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY }}
      
