--- a/.github/workflows/sls.yml
+++ b/.github/workflows/sls.yml
@@ -12,6 +12,12 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - run: npm i -g serverless
+    - name: Set up Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.17
+    - name: Build golang app on build directory
+      run: go build -o build/main main.go
     - run: serverless deploy
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY_ID }}
